Server: Switch to java 17